--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     name: Build
     env:
-      SCHEME: "FooManagement-dev"
+      SCHEME: "FooManagement-Dev"
       DEVICE: "iPhone 11"
       DERIVED_DATA_PATH: "DerivedData"
     runs-on: macOS-latest
