--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,7 +11,7 @@ jobs:
     name: Build
     env:
       SCHEME: "FooManagement-Dev"
-      DEVICE: "iPhone 11"
+      DEVICE: "iPhone 14"
       DERIVED_DATA_PATH: "DerivedData"
     runs-on: macOS-latest
     steps:
@@ -21,8 +21,8 @@ jobs:
 #       run: |
 #         gem install cocoapods
 #         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
+     - name: Install SPM dependencies
+       run: swift package update
     - name: Build application
       run: |
         set -o pipefail && xcodebuild clean -scheme $SCHEME -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH build-for-testing | xcpretty --color --simple
@@ -47,8 +47,8 @@ jobs:
 #       run: |
 #         gem install cocoapods
 #         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
+     - name: Install SPM dependencies
+       run: swift package update
     - name: Download products
       uses: actions/download-artifact@v1
       with:
@@ -77,8 +77,8 @@ jobs:
 #       run: |
 #         gem install cocoapods
 #         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
+     - name: Install SPM dependencies
+       run: swift package update
     - name: Download products
       uses: actions/download-artifact@v1
       with:
