--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,7 +11,7 @@ jobs:
     name: Build
     env:
       SCHEME: "FooManagement-Dev"
-      DEVICE: "iPhone 14"
+      DEVICE: "iPhone 11"
       DERIVED_DATA_PATH: "DerivedData"
     runs-on: macOS-latest
     steps:
@@ -22,7 +22,9 @@ jobs:
 #         gem install cocoapods
 #         pod install
     - name: Install SPM dependencies
-      run: swift package update
+      run: |
+        swift package update
+        swift package resolve
     - name: Build application
       run: |
         set -o pipefail && xcodebuild clean -scheme $SCHEME -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH build-for-testing | xcpretty --color --simple
