--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -39,8 +39,8 @@ jobs:
  
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_14.2.app && /usr/bin/xcodebuild -version
-    - name: Run tests
-      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' | xcpretty && exit ${PIPESTATUS[0]}
+    - name: Build
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.4.1' | xcpretty && exit ${PIPESTATUS[0]}
     - name: Upload products
       uses: actions/upload-artifact@v2
       with:
