--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -38,7 +38,7 @@ jobs:
           restore-keys: ${{ runner.os }}-deps-v1-
     - name: Build
       run: |
-        xcodebuild -workspace $PROJECT -scheme Bullet -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13' build
+        xcodebuild -project $PROJECT -scheme $SCHEME -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13' build
     - name: Upload products
       uses: actions/upload-artifact@v2
       with:
