--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -45,57 +45,34 @@ jobs:
         name: Products
         path: DerivedData/Build/Products
         
-  unit_test:
-    name: Unit test
-    env:
-      DEVICE: "iPhone 11"
-      DERIVED_DATA_PATH: "DerivedData"
-      UNIT_TEST_TARGET: "FooManagementTests"
+  test:
+    name: Test
     runs-on: macOS-latest
-    needs: build
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-#     - name: Install CocoaPods
-#       run: |
-#         gem install cocoapods
-#         pod install
-    - name: Install SPM dependencies
-      run: swift package update
-    - name: Download products
-      uses: actions/download-artifact@v1
+    - name: Restore Packages Cache
+      uses: actions/cache@v2
+      id: cache
       with:
-        name: Products
-    - name: Run unit tests
+          path: |
+            Build/SourcePackages
+            Build/Build/Products
+          key: ${{ runner.os }}-deps-v1-${{ hashFiles('BILDsolid.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+          restore-keys: ${{ runner.os }}-deps-v1-
+    - name: Build for Testing
       run: |
-        set -o pipefail && xcodebuild test-without-building -xctestrun $(find . -type f -name "*.xctestrun") -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH -enableCodeCoverage YES -only-testing:$UNIT_TEST_TARGET | xcpretty --color --simple
-    - name: Upload test logs
-      uses: actions/upload-artifact@v1
-      with:
-        name: TestLogs
-        path: DerivedData/Logs/Test
-
-  ui_test:
-    name: UI test
-    env:
-      DEVICE: "iPhone 11"
-      DERIVED_DATA_PATH: "DerivedData"
-      UI_TEST_TARGET: "FooManagementUITests"
-    runs-on: macOS-latest
-    needs: build
-    steps:
-    - name: Checkout project 
-      uses: actions/checkout@v2
-#     - name: Install CocoaPods
-#       run: |
-#         gem install cocoapods
-#         pod install
-    - name: Install SPM dependencies
-      run: swift package update
-    - name: Download products
-      uses: actions/download-artifact@v1
-      with:
-        name: Products
-    - name: Run UI tests
+        xcodebuild -project $PROJECT -scheme $SCHEME -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13' -derivedDataPath DerivedData -enableCodeCoverage YES build-for-testing
+    - name: Run Unit Tests
       run: |
-        set -o pipefail && xcodebuild test-without-building -xctestrun $(find . -type f -name "*.xctestrun") -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH -enableCodeCoverage YES -only-testing:$UI_TEST_TARGET | xcpretty  --color --simple
+        xcodebuild -destination 'platform=iOS Simulator,name=iPhone 13' -derivedDataPath DerivedData -enableCodeCoverage YES -resultBundlePath test_results -testPlan UnitTests test
+      continue-on-error: true
+    - name: Run UI Tests
+      run: |
+        xcodebuild -destination 'platform=iOS Simulator,name=iPhone 13' -derivedDataPath DerivedData -enableCodeCoverage YES -resultBundlePath test_results -testPlan UITests test
+      continue-on-error: true
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: Test Results
+        path: test_results
