--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' build
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform:iOS Simulator, id:FE1D89A2-165F-491B-AA35-DBFA7DCBCE5D, OS:16.2, name:iPhone 14' build
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
@@ -35,7 +35,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Run Unit Tests
-      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' test -only-testing:$TESTTARGET
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform:iOS Simulator, id:FE1D89A2-165F-491B-AA35-DBFA7DCBCE5D, OS:16.2, name:iPhone 14' test -only-testing:$TESTTARGET
 
   ui_test:
     env:
@@ -49,4 +49,4 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Run UI Tests
-      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' test -only-testing:$TESTTARGET
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform:iOS Simulator, id:FE1D89A2-165F-491B-AA35-DBFA7DCBCE5D, OS:16.2, name:iPhone 14' test -only-testing:$TESTTARGET
