--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: main workflow
+name: Main workflow
 
 on:
   push:
@@ -8,81 +8,45 @@ on:
 
 jobs:
   build:
-    name: Build
     env:
-      SCHEME: "FooManagement"
-      DEVICE: "iPhone 11"
-      DERIVED_DATA_PATH: "DerivedData"
-    runs-on: macOS-latest
+     PROJECT: "FooManagement.xcodeproj"
+     SCHEME: "FooManagement"
+    runs-on: macos-latest
     steps:
-    - name: Checkout project
+    - name: Checkout code
       uses: actions/checkout@v2
-#     - name: Install CocoaPods
-#       run: |
-#         gem install cocoapods
-#         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
-    - name: Build application
-      run: |
-        set -o pipefail && xcodebuild clean -scheme $SCHEME -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH build-for-testing | xcpretty --color --simple
-    - name: Upload products
-      uses: actions/upload-artifact@v1
+    - name: Build
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.2' build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
       with:
-        name: Products
-        path: DerivedData/Build/Products
+        name: BuildArtifacts
+        path: $PROJECT/build/Release-iphonesimulator/$PROJECT.app
 
   unit_test:
-    name: Unit test
     env:
-      DEVICE: "iPhone 11"
-      DERIVED_DATA_PATH: "DerivedData"
-      UNIT_TEST_TARGET: "FooManagementTests"
-    runs-on: macOS-latest
+     PROJECT: "FooManagement.xcodeproj"
+     TESTTARGET: "FooManagementTests"
+     SCHEME: "FooManagement"
     needs: build
+    runs-on: macos-latest
+    if: success()
     steps:
-    - name: Checkout project
+    - name: Checkout code
       uses: actions/checkout@v2
-#     - name: Install CocoaPods
-#       run: |
-#         gem install cocoapods
-#         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
-    - name: Download products
-      uses: actions/download-artifact@v1
-      with:
-        name: Products
-    - name: Run unit tests
-      run: |
-        set -o pipefail && xcodebuild test-without-building -xctestrun $(find . -type f -name "*.xctestrun") -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH -enableCodeCoverage YES -only-testing:$UNIT_TEST_TARGET | xcpretty --color --simple
-    - name: Upload test logs
-      uses: actions/upload-artifact@v1
-      with:
-        name: TestLogs
-        path: DerivedData/Logs/Test
+    - name: Run Unit Tests
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.2' test -only-testing:$TESTTARGET
 
   ui_test:
-    name: UI test
     env:
-      DEVICE: "iPhone 11"
-      DERIVED_DATA_PATH: "DerivedData"
-      UI_TEST_TARGET: "FooManagementUITests"
-    runs-on: macOS-latest
+     PROJECT: "FooManagement.xcodeproj"
+     SCHEME: "FooManagement"
+     TESTTARGET: "FooManagementUITests"
     needs: build
+    runs-on: macos-latest
+    if: success()
     steps:
-    - name: Checkout project 
+    - name: Checkout code
       uses: actions/checkout@v2
-#     - name: Install CocoaPods
-#       run: |
-#         gem install cocoapods
-#         pod install
-#     - name: Install SPM dependencies
-#       run: swift package update
-    - name: Download products
-      uses: actions/download-artifact@v1
-      with:
-        name: Products
-    - name: Run UI tests
-      run: |
-        set -o pipefail && xcodebuild test-without-building -xctestrun $(find . -type f -name "*.xctestrun") -destination "platform=iOS Simulator,name=$DEVICE" -derivedDataPath $DERIVED_DATA_PATH -enableCodeCoverage YES -only-testing:$UI_TEST_TARGET | xcpretty  --color --simple
+    - name: Run UI Tests
+      run: xcodebuild -scheme $SCHEME -project $PROJECT -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.2' test -only-testing:$TESTTARGET
